// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Flask Blueprint resolver pre-move parity golden > does not cross a missing regular-package boundary 1`] = `
{
  "edges": [
    {
      "confidence": 1,
      "evidence": {
        "candidateSymbolIds": [
          "symbol:app%2Froutes%2Fcatalog.py:app%2Froutes%2Fcatalog.py%23items:function:0",
        ],
        "ruleId": "syntax.containment",
        "stage": "syntax",
      },
      "filePath": "app/routes/catalog.py",
      "id": "edge:symbol%3Aapp%252Froutes%252Fcatalog.py%3Aapp%252Froutes%252Fcatalog.py%3Afile%3A0:symbol%3Aapp%252Froutes%252Fcatalog.py%3Aapp%252Froutes%252Fcatalog.py%2523items%3Afunction%3A0:contains:5:1",
      "kind": "contains",
      "range": {
        "end": {
          "column": 14,
          "line": 6,
        },
        "start": {
          "column": 1,
          "line": 5,
        },
      },
      "referenceName": "items",
      "resolution": "exact",
      "sourceId": "symbol:app%2Froutes%2Fcatalog.py:app%2Froutes%2Fcatalog.py:file:0",
      "targetId": "symbol:app%2Froutes%2Fcatalog.py:app%2Froutes%2Fcatalog.py%23items:function:0",
    },
  ],
  "files": [
    {
      "contentHash": "c832a3d8378bbdd95c4898c1c72cfbc343176d2bc462bf4feba234c1ac638417",
      "generated": {
        "classifierVersion": "generated-evidence-v1",
        "evidence": [],
        "generated": false,
      },
      "indexedAt": "2026-09-09T00:00:00.000Z",
      "language": "python",
      "path": "app/main.py",
      "sourceRole": {
        "classifierVersion": "source-role-evidence-v2",
        "evidence": [],
        "role": "production",
      },
    },
    {
      "contentHash": "e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855",
      "generated": {
        "classifierVersion": "generated-evidence-v1",
        "evidence": [],
        "generated": false,
      },
      "indexedAt": "2026-09-09T00:00:00.000Z",
      "language": "python",
      "path": "app/routes/__init__.py",
      "sourceRole": {
        "classifierVersion": "source-role-evidence-v2",
        "evidence": [],
        "role": "production",
      },
    },
    {
      "contentHash": "b6a2d31ca5c701a594a7ed1aae3030a89733ea9934cc87c6d44399aaf10a3d31",
      "generated": {
        "classifierVersion": "generated-evidence-v1",
        "evidence": [],
        "generated": false,
      },
      "indexedAt": "2026-09-09T00:00:00.000Z",
      "language": "python",
      "path": "app/routes/catalog.py",
      "sourceRole": {
        "classifierVersion": "source-role-evidence-v2",
        "evidence": [],
        "role": "production",
      },
    },
  ],
  "pendingReferences": [],
  "symbols": [
    {
      "declarationOrdinal": 0,
      "filePath": "app/main.py",
      "id": "symbol:app%2Fmain.py:app%2Fmain.py:file:0",
      "isExported": true,
      "kind": "file",
      "name": "main.py",
      "qualifiedName": "app/main.py",
      "range": {
        "end": {
          "column": 51,
          "line": 4,
        },
        "start": {
          "column": 1,
          "line": 1,
        },
      },
    },
    {
      "declarationOrdinal": 0,
      "filePath": "app/routes/__init__.py",
      "id": "symbol:app%2Froutes%2F__init__.py:app%2Froutes%2F__init__.py:file:0",
      "isExported": true,
      "kind": "file",
      "name": "__init__.py",
      "qualifiedName": "app/routes/__init__.py",
      "range": {
        "end": {
          "column": 1,
          "line": 1,
        },
        "start": {
          "column": 1,
          "line": 1,
        },
      },
    },
    {
      "declarationOrdinal": 0,
      "filePath": "app/routes/catalog.py",
      "id": "symbol:app%2Froutes%2Fcatalog.py:app%2Froutes%2Fcatalog.py%23items:function:0",
      "isExported": false,
      "kind": "function",
      "name": "items",
      "qualifiedName": "app/routes/catalog.py#items",
      "range": {
        "end": {
          "column": 14,
          "line": 6,
        },
        "start": {
          "column": 1,
          "line": 5,
        },
      },
    },
    {
      "declarationOrdinal": 0,
      "filePath": "app/routes/catalog.py",
      "id": "symbol:app%2Froutes%2Fcatalog.py:app%2Froutes%2Fcatalog.py:file:0",
      "isExported": true,
      "kind": "file",
      "name": "catalog.py",
      "qualifiedName": "app/routes/catalog.py",
      "range": {
        "end": {
          "column": 14,
          "line": 6,
        },
        "start": {
          "column": 1,
          "line": 1,
        },
      },
    },
  ],
}
`;

exports[`Flask Blueprint resolver pre-move parity golden > keeps missing and dynamic Blueprint targets unresolved 1`] = `
{
  "edges": [
    {
      "confidence": 1,
      "evidence": {
        "candidateSymbolIds": [
          "symbol:app%2Froutes%2Fdynamic.py:app%2Froutes%2Fdynamic.py%23dynamic:function:0",
        ],
        "ruleId": "syntax.containment",
        "stage": "syntax",
      },
      "filePath": "app/routes/dynamic.py",
      "id": "edge:symbol%3Aapp%252Froutes%252Fdynamic.py%3Aapp%252Froutes%252Fdynamic.py%3Afile%3A0:symbol%3Aapp%252Froutes%252Fdynamic.py%3Aapp%252Froutes%252Fdynamic.py%2523dynamic%3Afunction%3A0:contains:6:1",
      "kind": "contains",
      "range": {
        "end": {
          "column": 24,
          "line": 7,
        },
        "start": {
          "column": 1,
          "line": 6,
        },
      },
      "referenceName": "dynamic",
      "resolution": "exact",
      "sourceId": "symbol:app%2Froutes%2Fdynamic.py:app%2Froutes%2Fdynamic.py:file:0",
      "targetId": "symbol:app%2Froutes%2Fdynamic.py:app%2Froutes%2Fdynamic.py%23dynamic:function:0",
    },
  ],
  "files": [
    {
      "contentHash": "e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855",
      "generated": {
        "classifierVersion": "generated-evidence-v1",
        "evidence": [],
        "generated": false,
      },
      "indexedAt": "2026-09-09T00:00:00.000Z",
      "language": "python",
      "path": "app/__init__.py",
      "sourceRole": {
        "classifierVersion": "source-role-evidence-v2",
        "evidence": [],
        "role": "production",
      },
    },
    {
      "contentHash": "c9f4e0396b08bbbaedcb1b8969b5a2916b32149acedce111ca1df972ea08f0d2",
      "generated": {
        "classifierVersion": "generated-evidence-v1",
        "evidence": [],
        "generated": false,
      },
      "indexedAt": "2026-09-09T00:00:00.000Z",
      "language": "python",
      "path": "app/main.py",
      "sourceRole": {
        "classifierVersion": "source-role-evidence-v2",
        "evidence": [],
        "role": "production",
      },
    },
    {
      "contentHash": "ba6be9e723ec77eda2cd282eb89babc98ea0ce993e147a1e742f52d1ca7eecd9",
      "generated": {
        "classifierVersion": "generated-evidence-v1",
        "evidence": [],
        "generated": false,
      },
      "indexedAt": "2026-09-09T00:00:00.000Z",
      "language": "python",
      "path": "app/routes/__init__.py",
      "sourceRole": {
        "classifierVersion": "source-role-evidence-v2",
        "evidence": [],
        "role": "production",
      },
    },
    {
      "contentHash": "4a0e27522b0105fc88a7a01b9de45d6afc5afbdc7a00c89ecbe385a7e289ff4c",
      "generated": {
        "classifierVersion": "generated-evidence-v1",
        "evidence": [],
        "generated": false,
      },
      "indexedAt": "2026-09-09T00:00:00.000Z",
      "language": "python",
      "path": "app/routes/dynamic.py",
      "sourceRole": {
        "classifierVersion": "source-role-evidence-v2",
        "evidence": [],
        "role": "production",
      },
    },
  ],
  "pendingReferences": [],
  "symbols": [
    {
      "declarationOrdinal": 0,
      "filePath": "app/__init__.py",
      "id": "symbol:app%2F__init__.py:app%2F__init__.py:file:0",
      "isExported": true,
      "kind": "file",
      "name": "__init__.py",
      "qualifiedName": "app/__init__.py",
      "range": {
        "end": {
          "column": 1,
          "line": 1,
        },
        "start": {
          "column": 1,
          "line": 1,
        },
      },
    },
    {
      "declarationOrdinal": 0,
      "filePath": "app/main.py",
      "id": "symbol:app%2Fmain.py:app%2Fmain.py:file:0",
      "isExported": true,
      "kind": "file",
      "name": "main.py",
      "qualifiedName": "app/main.py",
      "range": {
        "end": {
          "column": 61,
          "line": 9,
        },
        "start": {
          "column": 1,
          "line": 1,
        },
      },
    },
    {
      "declarationOrdinal": 0,
      "filePath": "app/routes/__init__.py",
      "id": "symbol:app%2Froutes%2F__init__.py:app%2Froutes%2F__init__.py:file:0",
      "isExported": true,
      "kind": "file",
      "name": "__init__.py",
      "qualifiedName": "app/routes/__init__.py",
      "range": {
        "end": {
          "column": 52,
          "line": 1,
        },
        "start": {
          "column": 1,
          "line": 1,
        },
      },
    },
    {
      "declarationOrdinal": 0,
      "filePath": "app/routes/dynamic.py",
      "id": "symbol:app%2Froutes%2Fdynamic.py:app%2Froutes%2Fdynamic.py%23dynamic:function:0",
      "isExported": false,
      "kind": "function",
      "name": "dynamic",
      "qualifiedName": "app/routes/dynamic.py#dynamic",
      "range": {
        "end": {
          "column": 24,
          "line": 7,
        },
        "start": {
          "column": 1,
          "line": 6,
        },
      },
    },
    {
      "declarationOrdinal": 0,
      "filePath": "app/routes/dynamic.py",
      "id": "symbol:app%2Froutes%2Fdynamic.py:app%2Froutes%2Fdynamic.py:file:0",
      "isExported": true,
      "kind": "file",
      "name": "dynamic.py",
      "qualifiedName": "app/routes/dynamic.py",
      "range": {
        "end": {
          "column": 24,
          "line": 7,
        },
        "start": {
          "column": 1,
          "line": 1,
        },
      },
    },
  ],
}
`;

exports[`Flask Blueprint resolver pre-move parity golden > preserves relative, absolute, and initializer re-export Blueprint routes 1`] = `
{
  "edges": [
    {
      "confidence": 1,
      "evidence": {
        "candidateSymbolIds": [
          "symbol:app%2Froutes%2Fadmin.py:app%2Froutes%2Fadmin.py%23delete_users:function:0",
        ],
        "resolutionPath": [
          "app/main.py",
          "app/routes/admin.py",
        ],
        "ruleId": "framework.flask.project-absolute-blueprint.register-blueprint.decorator.local-function",
        "stage": "module",
      },
      "filePath": "app/routes/admin.py",
      "id": "edge:symbol%3Aapp%252Froutes%252Fadmin.py%3Aapp%252Froutes%252Fadmin.py%2523route%253ADELETE%2520%252Fabsolute%252Fadmin%252Fusers%3Aroute%3A0:symbol%3Aapp%252Froutes%252Fadmin.py%3Aapp%252Froutes%252Fadmin.py%2523delete_users%3Afunction%3A0:routes:4:1",
      "kind": "routes",
      "range": {
        "end": {
          "column": 1,
          "line": 5,
        },
        "start": {
          "column": 1,
          "line": 4,
        },
      },
      "referenceName": "delete_users",
      "resolution": "exact",
      "sourceId": "symbol:app%2Froutes%2Fadmin.py:app%2Froutes%2Fadmin.py%23route%3ADELETE%20%2Fabsolute%2Fadmin%2Fusers:route:0",
      "targetId": "symbol:app%2Froutes%2Fadmin.py:app%2Froutes%2Fadmin.py%23delete_users:function:0",
    },
    {
      "confidence": 1,
      "evidence": {
        "candidateSymbolIds": [
          "symbol:app%2Froutes%2Fadmin.py:app%2Froutes%2Fadmin.py%23delete_users:function:0",
        ],
        "resolutionPath": [
          "app/main.py",
          "app/routes/__init__.py",
          "app/routes/admin.py",
        ],
        "ruleId": "framework.flask.project-absolute-reexported-blueprint.register-blueprint.decorator.local-function",
        "stage": "module",
      },
      "filePath": "app/routes/admin.py",
      "id": "edge:symbol%3Aapp%252Froutes%252Fadmin.py%3Aapp%252Froutes%252Fadmin.py%2523route%253ADELETE%2520%252Fabsolute-reexport%252Fadmin%252Fusers%3Aroute%3A0:symbol%3Aapp%252Froutes%252Fadmin.py%3Aapp%252Froutes%252Fadmin.py%2523delete_users%3Afunction%3A0:routes:4:1",
      "kind": "routes",
      "range": {
        "end": {
          "column": 1,
          "line": 5,
        },
        "start": {
          "column": 1,
          "line": 4,
        },
      },
      "referenceName": "delete_users",
      "resolution": "exact",
      "sourceId": "symbol:app%2Froutes%2Fadmin.py:app%2Froutes%2Fadmin.py%23route%3ADELETE%20%2Fabsolute-reexport%2Fadmin%2Fusers:route:0",
      "targetId": "symbol:app%2Froutes%2Fadmin.py:app%2Froutes%2Fadmin.py%23delete_users:function:0",
    },
    {
      "confidence": 1,
      "evidence": {
        "candidateSymbolIds": [
          "symbol:app%2Froutes%2Fadmin.py:app%2Froutes%2Fadmin.py%23delete_users:function:0",
        ],
        "ruleId": "syntax.containment",
        "stage": "syntax",
      },
      "filePath": "app/routes/admin.py",
      "id": "edge:symbol%3Aapp%252Froutes%252Fadmin.py%3Aapp%252Froutes%252Fadmin.py%3Afile%3A0:symbol%3Aapp%252Froutes%252Fadmin.py%3Aapp%252Froutes%252Fadmin.py%2523delete_users%3Afunction%3A0:contains:5:1",
      "kind": "contains",
      "range": {
        "end": {
          "column": 24,
          "line": 6,
        },
        "start": {
          "column": 1,
          "line": 5,
        },
      },
      "referenceName": "delete_users",
      "resolution": "exact",
      "sourceId": "symbol:app%2Froutes%2Fadmin.py:app%2Froutes%2Fadmin.py:file:0",
      "targetId": "symbol:app%2Froutes%2Fadmin.py:app%2Froutes%2Fadmin.py%23delete_users:function:0",
    },
    {
      "confidence": 1,
      "evidence": {
        "candidateSymbolIds": [
          "symbol:app%2Froutes%2Fadmin.py:app%2Froutes%2Fadmin.py%23route%3ADELETE%20%2Fabsolute%2Fadmin%2Fusers:route:0",
        ],
        "ruleId": "syntax.containment",
        "stage": "syntax",
      },
      "filePath": "app/routes/admin.py",
      "id": "edge:symbol%3Aapp%252Froutes%252Fadmin.py%3Aapp%252Froutes%252Fadmin.py%3Afile%3A0:symbol%3Aapp%252Froutes%252Fadmin.py%3Aapp%252Froutes%252Fadmin.py%2523route%253ADELETE%2520%252Fabsolute%252Fadmin%252Fusers%3Aroute%3A0:contains:4:1",
      "kind": "contains",
      "range": {
        "end": {
          "column": 1,
          "line": 5,
        },
        "start": {
          "column": 1,
          "line": 4,
        },
      },
      "referenceName": "DELETE /absolute/admin/users",
      "resolution": "exact",
      "sourceId": "symbol:app%2Froutes%2Fadmin.py:app%2Froutes%2Fadmin.py:file:0",
      "targetId": "symbol:app%2Froutes%2Fadmin.py:app%2Froutes%2Fadmin.py%23route%3ADELETE%20%2Fabsolute%2Fadmin%2Fusers:route:0",
    },
    {
      "confidence": 1,
      "evidence": {
        "candidateSymbolIds": [
          "symbol:app%2Froutes%2Fadmin.py:app%2Froutes%2Fadmin.py%23route%3ADELETE%20%2Fabsolute-reexport%2Fadmin%2Fusers:route:0",
        ],
        "ruleId": "syntax.containment",
        "stage": "syntax",
      },
      "filePath": "app/routes/admin.py",
      "id": "edge:symbol%3Aapp%252Froutes%252Fadmin.py%3Aapp%252Froutes%252Fadmin.py%3Afile%3A0:symbol%3Aapp%252Froutes%252Fadmin.py%3Aapp%252Froutes%252Fadmin.py%2523route%253ADELETE%2520%252Fabsolute-reexport%252Fadmin%252Fusers%3Aroute%3A0:contains:4:1",
      "kind": "contains",
      "range": {
        "end": {
          "column": 1,
          "line": 5,
        },
        "start": {
          "column": 1,
          "line": 4,
        },
      },
      "referenceName": "DELETE /absolute-reexport/admin/users",
      "resolution": "exact",
      "sourceId": "symbol:app%2Froutes%2Fadmin.py:app%2Froutes%2Fadmin.py:file:0",
      "targetId": "symbol:app%2Froutes%2Fadmin.py:app%2Froutes%2Fadmin.py%23route%3ADELETE%20%2Fabsolute-reexport%2Fadmin%2Fusers:route:0",
    },
    {
      "confidence": 1,
      "evidence": {
        "candidateSymbolIds": [
          "symbol:app%2Froutes%2Fcatalog.py:app%2Froutes%2Fcatalog.py%23items:function:0",
        ],
        "resolutionPath": [
          "app/main.py",
          "app/routes/catalog.py",
        ],
        "ruleId": "framework.flask.imported-blueprint.register-blueprint.decorator.local-function",
        "stage": "module",
      },
      "filePath": "app/routes/catalog.py",
      "id": "edge:symbol%3Aapp%252Froutes%252Fcatalog.py%3Aapp%252Froutes%252Fcatalog.py%2523route%253AGET%2520%252Fdirect%252Fcatalog%252Fitems%3Aroute%3A0:symbol%3Aapp%252Froutes%252Fcatalog.py%3Aapp%252Froutes%252Fcatalog.py%2523items%3Afunction%3A0:routes:4:1",
      "kind": "routes",
      "range": {
        "end": {
          "column": 1,
          "line": 5,
        },
        "start": {
          "column": 1,
          "line": 4,
        },
      },
      "referenceName": "items",
      "resolution": "exact",
      "sourceId": "symbol:app%2Froutes%2Fcatalog.py:app%2Froutes%2Fcatalog.py%23route%3AGET%20%2Fdirect%2Fcatalog%2Fitems:route:0",
      "targetId": "symbol:app%2Froutes%2Fcatalog.py:app%2Froutes%2Fcatalog.py%23items:function:0",
    },
    {
      "confidence": 1,
      "evidence": {
        "candidateSymbolIds": [
          "symbol:app%2Froutes%2Fcatalog.py:app%2Froutes%2Fcatalog.py%23items:function:0",
        ],
        "resolutionPath": [
          "app/main.py",
          "app/routes/__init__.py",
          "app/routes/catalog.py",
        ],
        "ruleId": "framework.flask.reexported-blueprint.register-blueprint.decorator.local-function",
        "stage": "module",
      },
      "filePath": "app/routes/catalog.py",
      "id": "edge:symbol%3Aapp%252Froutes%252Fcatalog.py%3Aapp%252Froutes%252Fcatalog.py%2523route%253AGET%2520%252Frelative-reexport%252Fcatalog%252Fitems%3Aroute%3A0:symbol%3Aapp%252Froutes%252Fcatalog.py%3Aapp%252Froutes%252Fcatalog.py%2523items%3Afunction%3A0:routes:4:1",
      "kind": "routes",
      "range": {
        "end": {
          "column": 1,
          "line": 5,
        },
        "start": {
          "column": 1,
          "line": 4,
        },
      },
      "referenceName": "items",
      "resolution": "exact",
      "sourceId": "symbol:app%2Froutes%2Fcatalog.py:app%2Froutes%2Fcatalog.py%23route%3AGET%20%2Frelative-reexport%2Fcatalog%2Fitems:route:0",
      "targetId": "symbol:app%2Froutes%2Fcatalog.py:app%2Froutes%2Fcatalog.py%23items:function:0",
    },
    {
      "confidence": 1,
      "evidence": {
        "candidateSymbolIds": [
          "symbol:app%2Froutes%2Fcatalog.py:app%2Froutes%2Fcatalog.py%23orders:function:0",
        ],
        "resolutionPath": [
          "app/main.py",
          "app/routes/catalog.py",
        ],
        "ruleId": "framework.flask.imported-blueprint.register-blueprint.decorator.local-function",
        "stage": "module",
      },
      "filePath": "app/routes/catalog.py",
      "id": "edge:symbol%3Aapp%252Froutes%252Fcatalog.py%3Aapp%252Froutes%252Fcatalog.py%2523route%253APOST%2520%252Fdirect%252Fcatalog%252Forders%3Aroute%3A0:symbol%3Aapp%252Froutes%252Fcatalog.py%3Aapp%252Froutes%252Fcatalog.py%2523orders%3Afunction%3A0:routes:8:1",
      "kind": "routes",
      "range": {
        "end": {
          "column": 1,
          "line": 9,
        },
        "start": {
          "column": 1,
          "line": 8,
        },
      },
      "referenceName": "orders",
      "resolution": "exact",
      "sourceId": "symbol:app%2Froutes%2Fcatalog.py:app%2Froutes%2Fcatalog.py%23route%3APOST%20%2Fdirect%2Fcatalog%2Forders:route:0",
      "targetId": "symbol:app%2Froutes%2Fcatalog.py:app%2Froutes%2Fcatalog.py%23orders:function:0",
    },
    {
      "confidence": 1,
      "evidence": {
        "candidateSymbolIds": [
          "symbol:app%2Froutes%2Fcatalog.py:app%2Froutes%2Fcatalog.py%23orders:function:0",
        ],
        "resolutionPath": [
          "app/main.py",
          "app/routes/__init__.py",
          "app/routes/catalog.py",
        ],
        "ruleId": "framework.flask.reexported-blueprint.register-blueprint.decorator.local-function",
        "stage": "module",
      },
      "filePath": "app/routes/catalog.py",
      "id": "edge:symbol%3Aapp%252Froutes%252Fcatalog.py%3Aapp%252Froutes%252Fcatalog.py%2523route%253APOST%2520%252Frelative-reexport%252Fcatalog%252Forders%3Aroute%3A0:symbol%3Aapp%252Froutes%252Fcatalog.py%3Aapp%252Froutes%252Fcatalog.py%2523orders%3Afunction%3A0:routes:8:1",
      "kind": "routes",
      "range": {
        "end": {
          "column": 1,
          "line": 9,
        },
        "start": {
          "column": 1,
          "line": 8,
        },
      },
      "referenceName": "orders",
      "resolution": "exact",
      "sourceId": "symbol:app%2Froutes%2Fcatalog.py:app%2Froutes%2Fcatalog.py%23route%3APOST%20%2Frelative-reexport%2Fcatalog%2Forders:route:0",
      "targetId": "symbol:app%2Froutes%2Fcatalog.py:app%2Froutes%2Fcatalog.py%23orders:function:0",
    },
    {
      "confidence": 1,
      "evidence": {
        "candidateSymbolIds": [
          "symbol:app%2Froutes%2Fcatalog.py:app%2Froutes%2Fcatalog.py%23items:function:0",
        ],
        "ruleId": "syntax.containment",
        "stage": "syntax",
      },
      "filePath": "app/routes/catalog.py",
      "id": "edge:symbol%3Aapp%252Froutes%252Fcatalog.py%3Aapp%252Froutes%252Fcatalog.py%3Afile%3A0:symbol%3Aapp%252Froutes%252Fcatalog.py%3Aapp%252Froutes%252Fcatalog.py%2523items%3Afunction%3A0:contains:5:1",
      "kind": "contains",
      "range": {
        "end": {
          "column": 14,
          "line": 6,
        },
        "start": {
          "column": 1,
          "line": 5,
        },
      },
      "referenceName": "items",
      "resolution": "exact",
      "sourceId": "symbol:app%2Froutes%2Fcatalog.py:app%2Froutes%2Fcatalog.py:file:0",
      "targetId": "symbol:app%2Froutes%2Fcatalog.py:app%2Froutes%2Fcatalog.py%23items:function:0",
    },
    {
      "confidence": 1,
      "evidence": {
        "candidateSymbolIds": [
          "symbol:app%2Froutes%2Fcatalog.py:app%2Froutes%2Fcatalog.py%23orders:function:0",
        ],
        "ruleId": "syntax.containment",
        "stage": "syntax",
      },
      "filePath": "app/routes/catalog.py",
      "id": "edge:symbol%3Aapp%252Froutes%252Fcatalog.py%3Aapp%252Froutes%252Fcatalog.py%3Afile%3A0:symbol%3Aapp%252Froutes%252Fcatalog.py%3Aapp%252Froutes%252Fcatalog.py%2523orders%3Afunction%3A0:contains:9:1",
      "kind": "contains",
      "range": {
        "end": {
          "column": 24,
          "line": 10,
        },
        "start": {
          "column": 1,
          "line": 9,
        },
      },
      "referenceName": "orders",
      "resolution": "exact",
      "sourceId": "symbol:app%2Froutes%2Fcatalog.py:app%2Froutes%2Fcatalog.py:file:0",
      "targetId": "symbol:app%2Froutes%2Fcatalog.py:app%2Froutes%2Fcatalog.py%23orders:function:0",
    },
    {
      "confidence": 1,
      "evidence": {
        "candidateSymbolIds": [
          "symbol:app%2Froutes%2Fcatalog.py:app%2Froutes%2Fcatalog.py%23route%3AGET%20%2Fdirect%2Fcatalog%2Fitems:route:0",
        ],
        "ruleId": "syntax.containment",
        "stage": "syntax",
      },
      "filePath": "app/routes/catalog.py",
      "id": "edge:symbol%3Aapp%252Froutes%252Fcatalog.py%3Aapp%252Froutes%252Fcatalog.py%3Afile%3A0:symbol%3Aapp%252Froutes%252Fcatalog.py%3Aapp%252Froutes%252Fcatalog.py%2523route%253AGET%2520%252Fdirect%252Fcatalog%252Fitems%3Aroute%3A0:contains:4:1",
      "kind": "contains",
      "range": {
        "end": {
          "column": 1,
          "line": 5,
        },
        "start": {
          "column": 1,
          "line": 4,
        },
      },
      "referenceName": "GET /direct/catalog/items",
      "resolution": "exact",
      "sourceId": "symbol:app%2Froutes%2Fcatalog.py:app%2Froutes%2Fcatalog.py:file:0",
      "targetId": "symbol:app%2Froutes%2Fcatalog.py:app%2Froutes%2Fcatalog.py%23route%3AGET%20%2Fdirect%2Fcatalog%2Fitems:route:0",
    },
    {
      "confidence": 1,
      "evidence": {
        "candidateSymbolIds": [
          "symbol:app%2Froutes%2Fcatalog.py:app%2Froutes%2Fcatalog.py%23route%3AGET%20%2Frelative-reexport%2Fcatalog%2Fitems:route:0",
        ],
        "ruleId": "syntax.containment",
        "stage": "syntax",
      },
      "filePath": "app/routes/catalog.py",
      "id": "edge:symbol%3Aapp%252Froutes%252Fcatalog.py%3Aapp%252Froutes%252Fcatalog.py%3Afile%3A0:symbol%3Aapp%252Froutes%252Fcatalog.py%3Aapp%252Froutes%252Fcatalog.py%2523route%253AGET%2520%252Frelative-reexport%252Fcatalog%252Fitems%3Aroute%3A0:contains:4:1",
      "kind": "contains",
      "range": {
        "end": {
          "column": 1,
          "line": 5,
        },
        "start": {
          "column": 1,
          "line": 4,
        },
      },
      "referenceName": "GET /relative-reexport/catalog/items",
      "resolution": "exact",
      "sourceId": "symbol:app%2Froutes%2Fcatalog.py:app%2Froutes%2Fcatalog.py:file:0",
      "targetId": "symbol:app%2Froutes%2Fcatalog.py:app%2Froutes%2Fcatalog.py%23route%3AGET%20%2Frelative-reexport%2Fcatalog%2Fitems:route:0",
    },
    {
      "confidence": 1,
      "evidence": {
        "candidateSymbolIds": [
          "symbol:app%2Froutes%2Fcatalog.py:app%2Froutes%2Fcatalog.py%23route%3APOST%20%2Fdirect%2Fcatalog%2Forders:route:0",
        ],
        "ruleId": "syntax.containment",
        "stage": "syntax",
      },
      "filePath": "app/routes/catalog.py",
      "id": "edge:symbol%3Aapp%252Froutes%252Fcatalog.py%3Aapp%252Froutes%252Fcatalog.py%3Afile%3A0:symbol%3Aapp%252Froutes%252Fcatalog.py%3Aapp%252Froutes%252Fcatalog.py%2523route%253APOST%2520%252Fdirect%252Fcatalog%252Forders%3Aroute%3A0:contains:8:1",
      "kind": "contains",
      "range": {
        "end": {
          "column": 1,
          "line": 9,
        },
        "start": {
          "column": 1,
          "line": 8,
        },
      },
      "referenceName": "POST /direct/catalog/orders",
      "resolution": "exact",
      "sourceId": "symbol:app%2Froutes%2Fcatalog.py:app%2Froutes%2Fcatalog.py:file:0",
      "targetId": "symbol:app%2Froutes%2Fcatalog.py:app%2Froutes%2Fcatalog.py%23route%3APOST%20%2Fdirect%2Fcatalog%2Forders:route:0",
    },
    {
      "confidence": 1,
      "evidence": {
        "candidateSymbolIds": [
          "symbol:app%2Froutes%2Fcatalog.py:app%2Froutes%2Fcatalog.py%23route%3APOST%20%2Frelative-reexport%2Fcatalog%2Forders:route:0",
        ],
        "ruleId": "syntax.containment",
        "stage": "syntax",
      },
      "filePath": "app/routes/catalog.py",
      "id": "edge:symbol%3Aapp%252Froutes%252Fcatalog.py%3Aapp%252Froutes%252Fcatalog.py%3Afile%3A0:symbol%3Aapp%252Froutes%252Fcatalog.py%3Aapp%252Froutes%252Fcatalog.py%2523route%253APOST%2520%252Frelative-reexport%252Fcatalog%252Forders%3Aroute%3A0:contains:8:1",
      "kind": "contains",
      "range": {
        "end": {
          "column": 1,
          "line": 9,
        },
        "start": {
          "column": 1,
          "line": 8,
        },
      },
      "referenceName": "POST /relative-reexport/catalog/orders",
      "resolution": "exact",
      "sourceId": "symbol:app%2Froutes%2Fcatalog.py:app%2Froutes%2Fcatalog.py:file:0",
      "targetId": "symbol:app%2Froutes%2Fcatalog.py:app%2Froutes%2Fcatalog.py%23route%3APOST%20%2Frelative-reexport%2Fcatalog%2Forders:route:0",
    },
  ],
  "files": [
    {
      "contentHash": "e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855",
      "generated": {
        "classifierVersion": "generated-evidence-v1",
        "evidence": [],
        "generated": false,
      },
      "indexedAt": "2026-09-09T00:00:00.000Z",
      "language": "python",
      "path": "app/__init__.py",
      "sourceRole": {
        "classifierVersion": "source-role-evidence-v2",
        "evidence": [],
        "role": "production",
      },
    },
    {
      "contentHash": "55ce59361a60808039f0871cfeeded2f590b90a91b75b20877096f292159b082",
      "generated": {
        "classifierVersion": "generated-evidence-v1",
        "evidence": [],
        "generated": false,
      },
      "indexedAt": "2026-09-09T00:00:00.000Z",
      "language": "python",
      "path": "app/main.py",
      "sourceRole": {
        "classifierVersion": "source-role-evidence-v2",
        "evidence": [],
        "role": "production",
      },
    },
    {
      "contentHash": "c102cbf209b75631b5ac5f229096781ea57cffa14df6b5e4cb01afd15ab50001",
      "generated": {
        "classifierVersion": "generated-evidence-v1",
        "evidence": [],
        "generated": false,
      },
      "indexedAt": "2026-09-09T00:00:00.000Z",
      "language": "python",
      "path": "app/routes/__init__.py",
      "sourceRole": {
        "classifierVersion": "source-role-evidence-v2",
        "evidence": [],
        "role": "production",
      },
    },
    {
      "contentHash": "daee87616f1575ef4eb2a6d812148e027a5fc019fb034109131d134cd9f04765",
      "generated": {
        "classifierVersion": "generated-evidence-v1",
        "evidence": [],
        "generated": false,
      },
      "indexedAt": "2026-09-09T00:00:00.000Z",
      "language": "python",
      "path": "app/routes/admin.py",
      "sourceRole": {
        "classifierVersion": "source-role-evidence-v2",
        "evidence": [],
        "role": "production",
      },
    },
    {
      "contentHash": "6858eec0606541b10e40d651934d60ec9668de00ef5bb8d1d94969bf7cd2a809",
      "generated": {
        "classifierVersion": "generated-evidence-v1",
        "evidence": [],
        "generated": false,
      },
      "indexedAt": "2026-09-09T00:00:00.000Z",
      "language": "python",
      "path": "app/routes/catalog.py",
      "sourceRole": {
        "classifierVersion": "source-role-evidence-v2",
        "evidence": [],
        "role": "production",
      },
    },
  ],
  "pendingReferences": [],
  "symbols": [
    {
      "declarationOrdinal": 0,
      "filePath": "app/__init__.py",
      "id": "symbol:app%2F__init__.py:app%2F__init__.py:file:0",
      "isExported": true,
      "kind": "file",
      "name": "__init__.py",
      "qualifiedName": "app/__init__.py",
      "range": {
        "end": {
          "column": 1,
          "line": 1,
        },
        "start": {
          "column": 1,
          "line": 1,
        },
      },
    },
    {
      "declarationOrdinal": 0,
      "filePath": "app/main.py",
      "id": "symbol:app%2Fmain.py:app%2Fmain.py:file:0",
      "isExported": true,
      "kind": "file",
      "name": "main.py",
      "qualifiedName": "app/main.py",
      "range": {
        "end": {
          "column": 76,
          "line": 10,
        },
        "start": {
          "column": 1,
          "line": 1,
        },
      },
    },
    {
      "declarationOrdinal": 0,
      "filePath": "app/routes/__init__.py",
      "id": "symbol:app%2Froutes%2F__init__.py:app%2Froutes%2F__init__.py:file:0",
      "isExported": true,
      "kind": "file",
      "name": "__init__.py",
      "qualifiedName": "app/routes/__init__.py",
      "range": {
        "end": {
          "column": 61,
          "line": 2,
        },
        "start": {
          "column": 1,
          "line": 1,
        },
      },
    },
    {
      "declarationOrdinal": 0,
      "filePath": "app/routes/admin.py",
      "id": "symbol:app%2Froutes%2Fadmin.py:app%2Froutes%2Fadmin.py%23delete_users:function:0",
      "isExported": false,
      "kind": "function",
      "name": "delete_users",
      "qualifiedName": "app/routes/admin.py#delete_users",
      "range": {
        "end": {
          "column": 24,
          "line": 6,
        },
        "start": {
          "column": 1,
          "line": 5,
        },
      },
    },
    {
      "declarationOrdinal": 0,
      "filePath": "app/routes/admin.py",
      "id": "symbol:app%2Froutes%2Fadmin.py:app%2Froutes%2Fadmin.py%23route%3ADELETE%20%2Fabsolute%2Fadmin%2Fusers:route:0",
      "isExported": false,
      "kind": "route",
      "name": "DELETE /absolute/admin/users",
      "qualifiedName": "app/routes/admin.py#route:DELETE /absolute/admin/users",
      "range": {
        "end": {
          "column": 1,
          "line": 5,
        },
        "start": {
          "column": 1,
          "line": 4,
        },
      },
    },
    {
      "declarationOrdinal": 0,
      "filePath": "app/routes/admin.py",
      "id": "symbol:app%2Froutes%2Fadmin.py:app%2Froutes%2Fadmin.py%23route%3ADELETE%20%2Fabsolute-reexport%2Fadmin%2Fusers:route:0",
      "isExported": false,
      "kind": "route",
      "name": "DELETE /absolute-reexport/admin/users",
      "qualifiedName": "app/routes/admin.py#route:DELETE /absolute-reexport/admin/users",
      "range": {
        "end": {
          "column": 1,
          "line": 5,
        },
        "start": {
          "column": 1,
          "line": 4,
        },
      },
    },
    {
      "declarationOrdinal": 0,
      "filePath": "app/routes/admin.py",
      "id": "symbol:app%2Froutes%2Fadmin.py:app%2Froutes%2Fadmin.py:file:0",
      "isExported": true,
      "kind": "file",
      "name": "admin.py",
      "qualifiedName": "app/routes/admin.py",
      "range": {
        "end": {
          "column": 24,
          "line": 6,
        },
        "start": {
          "column": 1,
          "line": 1,
        },
      },
    },
    {
      "declarationOrdinal": 0,
      "filePath": "app/routes/catalog.py",
      "id": "symbol:app%2Froutes%2Fcatalog.py:app%2Froutes%2Fcatalog.py%23items:function:0",
      "isExported": false,
      "kind": "function",
      "name": "items",
      "qualifiedName": "app/routes/catalog.py#items",
      "range": {
        "end": {
          "column": 14,
          "line": 6,
        },
        "start": {
          "column": 1,
          "line": 5,
        },
      },
    },
    {
      "declarationOrdinal": 0,
      "filePath": "app/routes/catalog.py",
      "id": "symbol:app%2Froutes%2Fcatalog.py:app%2Froutes%2Fcatalog.py%23orders:function:0",
      "isExported": false,
      "kind": "function",
      "name": "orders",
      "qualifiedName": "app/routes/catalog.py#orders",
      "range": {
        "end": {
          "column": 24,
          "line": 10,
        },
        "start": {
          "column": 1,
          "line": 9,
        },
      },
    },
    {
      "declarationOrdinal": 0,
      "filePath": "app/routes/catalog.py",
      "id": "symbol:app%2Froutes%2Fcatalog.py:app%2Froutes%2Fcatalog.py%23route%3AGET%20%2Fdirect%2Fcatalog%2Fitems:route:0",
      "isExported": false,
      "kind": "route",
      "name": "GET /direct/catalog/items",
      "qualifiedName": "app/routes/catalog.py#route:GET /direct/catalog/items",
      "range": {
        "end": {
          "column": 1,
          "line": 5,
        },
        "start": {
          "column": 1,
          "line": 4,
        },
      },
    },
    {
      "declarationOrdinal": 0,
      "filePath": "app/routes/catalog.py",
      "id": "symbol:app%2Froutes%2Fcatalog.py:app%2Froutes%2Fcatalog.py%23route%3AGET%20%2Frelative-reexport%2Fcatalog%2Fitems:route:0",
      "isExported": false,
      "kind": "route",
      "name": "GET /relative-reexport/catalog/items",
      "qualifiedName": "app/routes/catalog.py#route:GET /relative-reexport/catalog/items",
      "range": {
        "end": {
          "column": 1,
          "line": 5,
        },
        "start": {
          "column": 1,
          "line": 4,
        },
      },
    },
    {
      "declarationOrdinal": 0,
      "filePath": "app/routes/catalog.py",
      "id": "symbol:app%2Froutes%2Fcatalog.py:app%2Froutes%2Fcatalog.py%23route%3APOST%20%2Fdirect%2Fcatalog%2Forders:route:0",
      "isExported": false,
      "kind": "route",
      "name": "POST /direct/catalog/orders",
      "qualifiedName": "app/routes/catalog.py#route:POST /direct/catalog/orders",
      "range": {
        "end": {
          "column": 1,
          "line": 9,
        },
        "start": {
          "column": 1,
          "line": 8,
        },
      },
    },
    {
      "declarationOrdinal": 0,
      "filePath": "app/routes/catalog.py",
      "id": "symbol:app%2Froutes%2Fcatalog.py:app%2Froutes%2Fcatalog.py%23route%3APOST%20%2Frelative-reexport%2Fcatalog%2Forders:route:0",
      "isExported": false,
      "kind": "route",
      "name": "POST /relative-reexport/catalog/orders",
      "qualifiedName": "app/routes/catalog.py#route:POST /relative-reexport/catalog/orders",
      "range": {
        "end": {
          "column": 1,
          "line": 9,
        },
        "start": {
          "column": 1,
          "line": 8,
        },
      },
    },
    {
      "declarationOrdinal": 0,
      "filePath": "app/routes/catalog.py",
      "id": "symbol:app%2Froutes%2Fcatalog.py:app%2Froutes%2Fcatalog.py:file:0",
      "isExported": true,
      "kind": "file",
      "name": "catalog.py",
      "qualifiedName": "app/routes/catalog.py",
      "range": {
        "end": {
          "column": 24,
          "line": 10,
        },
        "start": {
          "column": 1,
          "line": 1,
        },
      },
    },
  ],
}
`;
